Let master branch in the CI test execution

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [RuntimeDetection]
+    branches: [master]
   pull_request:
-    branches: [RuntimeDetection]
+    branches: [master]
 
 jobs:
   build:
