--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -6,9 +6,9 @@ on:
       cublas:
         type: boolean
         description: Build CUBLAS binaries
-      macos:
+      osx:
         type: boolean
-        description: Build MacOS binaries
+        description: Build OSX binaries
   push:
     branches: [cron_job]
   #schedule:
@@ -147,7 +147,7 @@ jobs:
         include:
           - build: 'arm64'
             defines: '-DCMAKE_OSX_ARCHITECTURES=arm64'
-          - build: 'x86_64'
+          - build: 'x64'
             defines: '-DLLAMA_METAL=OFF  -DCMAKE_OSX_ARCHITECTURES=x86_64'            
     runs-on: macos-latest   
     steps:
@@ -169,7 +169,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           path: ./build/libllama.dylib
-          name: llama-bin-macos-${{ matrix.build }}.dylib
+          name: llama-bin-osx-${{ matrix.build }}.dylib
       - name: Upload Metal
         uses: actions/upload-artifact@v3
         with:
@@ -212,12 +212,12 @@ jobs:
       - name: Rearrange MacOS files
         if: ${{ github.event.inputs.macos }}
         run: |
-          mkdir deps/macos-arm64
-          mkdir deps/macos-x86_64
+          mkdir deps/osx-arm64
+          mkdir deps/osx-x64
           
-          cp artifacts/llama-bin-macos-arm64.dylib/libllama.dylib deps/macos-arm64/libllama.dylib
-          cp artifacts/ggml-metal.metal/ggml-metal.metal deps/macos-arm64/ggml-metal.metal
-          cp artifacts/llama-bin-macos-x86_64.dylib/libllama.dylib deps/macos-x86_64/libllama.dylib
+          cp artifacts/llama-bin-osx-arm64.dylib/libllama.dylib deps/osx-arm64/libllama.dylib
+          cp artifacts/ggml-metal.metal/ggml-metal.metal deps/osx-arm64/ggml-metal.metal
+          cp artifacts/llama-bin-osx-x64.dylib/libllama.dylib deps/osx-x64/libllama.dylib
 
 
       - name: Rearrange CUDA files
