Correct improper rename

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
             os: ubuntu-latest
             config: release
           - build: osx-release
-            os: osx-latest
+            os: macos-latest
             config: release
           - build: windows-release
             os: windows-2019
