--- a/LLama.WebAPI/appsettings.json
+++ b/LLama.WebAPI/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ModelPath": "..\\..\\LLamaModel\\ggml-model-f32-q4_0.bin"
+  "ModelPath": "..\\LLama.Unittest\\Models\\llama-2-7b-chat.Q4_0.gguf"
 }
