--- a/LLama.KernelMemory/LLamaSharp.KernelMemory.csproj
+++ b/LLama.KernelMemory/LLamaSharp.KernelMemory.csproj
@@ -29,7 +29,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.10.231116.2-preview" />
+    <PackageReference Include="Microsoft.KernelMemory.Abstractions" Version="0.12.231123.1-preview" />
   </ItemGroup>
 
   <ItemGroup>
