--- a/LLama.SemanticKernel/LLamaSharp.SemanticKernel.csproj
+++ b/LLama.SemanticKernel/LLamaSharp.SemanticKernel.csproj
@@ -30,10 +30,11 @@
     <Platforms>AnyCPU;x64;Arm64</Platforms>
     <PackageId>LLamaSharp.semantic-kernel</PackageId>
     <Configurations>Debug;Release;GPU</Configurations>
+	<NoWarn>SKEXP0001,SKEXP0052</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.0.0-beta8" />
+	  <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.0.0-rc3" />
 	</ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
