Added AVX and AVX2 to MacOS x86_64 builds

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -140,7 +140,7 @@ jobs:
           - build: 'arm64'
             defines: '-DCMAKE_OSX_ARCHITECTURES=arm64'
           - build: 'x64'
-            defines: '-DCMAKE_OSX_ARCHITECTURES=x86_64 -DLLAMA_METAL=OFF'
+            defines: '-DCMAKE_OSX_ARCHITECTURES=x86_64 -DLLAMA_METAL=OFF -DLLAMA_AVX=ON -DLLAMA_AVX2=ON'
     runs-on: macos-latest   
     steps:
       - uses: actions/checkout@v3
