--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -49,6 +49,6 @@ jobs:
         name: "drop-ci-packages"
         path: './temp'
 
-#    - name: Push LLamaSharp packages to nuget.org
-#      run: dotnet nuget push ./temp/LLamaSharp*.nupkg --source https://www.nuget.org -k ${{ secrets.LLAMA_SHARP_NUGET_KEY }} --skip-duplicate
+    - name: Push LLamaSharp packages to nuget.org
+      run: dotnet nuget push ./temp/LLamaSharp*.nupkg --source https://www.nuget.org -k ${{ secrets.LLAMA_SHARP_NUGET_KEY }} --skip-duplicate
 
