Prepare binaries for linux and Windows

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -52,6 +52,11 @@ jobs:
         with:
           path: ./build/libllama.so
           name: llama-bin-linux-${{ matrix.build }}-x64.so
+      - name: Upload Llava
+        uses: actions/upload-artifact@v3
+        with:
+          path: ./build/examples/llava/libllava_shared.so
+          name: llava-bin-linux-${{ matrix.build }}-x64.so
 
   compile-windows:
     name: Compile (Windows)
@@ -88,6 +93,12 @@ jobs:
         with:
           path: .\build\bin\Release\llama.dll
           name: llama-bin-win-${{ matrix.build }}-x64.dll
+
+      - name: Upload Llava
+        uses: actions/upload-artifact@v3
+        with:
+          path: ./build/examples/llava/libllava_shared.dll
+          name: llava-bin-win-${{ matrix.build }}-x64.dll
 
   compile-clblast:
     name: Compile (clblast) - ${{ matrix.os }}
@@ -172,7 +183,8 @@ jobs:
             ./build/libllama.so
             # ./build/libclblast.so
           name: llama-bin-linux-clblast-x64.so
-          
+         
+
   compile-cublas:
     name: Compile (cublas)
     strategy:
@@ -305,11 +317,27 @@ jobs:
           cp artifacts/llama-bin-win-avx2-x64.dll/llama.dll   deps/avx2/llama.dll
           cp artifacts/llama-bin-win-avx512-x64.dll/llama.dll deps/avx512/llama.dll
 
+          cp artifacts/llava-bin-linux-noavx-x64.so/libllava_shared.so  deps/libllava_shared.so
+          cp artifacts/llava-bin-linux-avx-x64.so/libllava_shared.so    deps/avx/libllava_shared.so
+          cp artifacts/llava-bin-linux-avx2-x64.so/libllava_shared.so   deps/avx2/libllava_shared.so
+          cp artifacts/llava-bin-linux-avx512-x64.so/libllava_shared.so deps/avx512/libllava_shared.so
+
+          cp artifacts/llama-bin-win-noavx-x64.dll/llama.dll  deps/libllama.dll
+          cp artifacts/llama-bin-win-avx-x64.dll/llama.dll    deps/avx/libllama.dll
+          cp artifacts/llama-bin-win-avx2-x64.dll/llama.dll   deps/avx2/libllama.dll
+          cp artifacts/llama-bin-win-avx512-x64.dll/llama.dll deps/avx512/libllama.dll
+
+          cp artifacts/llava-bin-win-noavx-x64.dll/libllava_shared.dll  deps/libllava_shared.dll
+          cp artifacts/llava-bin-win-avx-x64.dll/libllava_shared.dll    deps/avx/libllava_shared.dll
+          cp artifacts/llava-bin-win-avx2-x64.dll/libllava_shared.dll   deps/avx2/libllava_shared.dll
+          cp artifacts/llava-bin-win-avx512-x64.dll/libllava_shared.dll deps/avx512/libllava_shared.dll
+
+
           cp artifacts/llama-bin-osx-arm64.dylib/libllama.dylib deps/osx-arm64/libllama.dylib
           cp artifacts/llava-bin-osx-arm64.dylib/libllava_shared.dylib deps/osx-arm64/libllava_shared.dylib
           cp artifacts/ggml-metal.metal/ggml-metal.metal        deps/osx-arm64/ggml-metal.metal
           cp artifacts/llama-bin-osx-x64.dylib/libllama.dylib   deps/osx-x64/libllama.dylib
-          cp artifacts/llama-bin-osx-x64.dylib/libllava_shared.dylib deps/osx-arm64/libllava_shared.dylib
+          cp artifacts/llava-bin-osx-x64.dylib/libllava_shared.dylib deps/osx-x64/libllava_shared.dylib
 
           cp artifacts/llama-bin-win-cublas-cu11.7.1-x64.dll/llama.dll    deps/cu11.7.1/llama.dll
           cp artifacts/llama-bin-linux-cublas-cu11.7.1-x64.so/libllama.so deps/cu11.7.1/libllama.so
