--- a/LLama.Web/LLama.Web.csproj
+++ b/LLama.Web/LLama.Web.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <Import Project="..\LLama\LLamaSharp.Runtime.targets" />
+  <Import Project="..\LLavaSharp\LLavaSharp.Runtime.targets" />  
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>disable</Nullable>
