--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -136,7 +136,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake .. ${{ env.COMMON_DEFINE }} -DLLAMA_CLBLAST=ON
+          cmake .. ${{ env.COMMON_DEFINE }} -DLLAMA_CLBLAST=ON -DCMAKE_PREFIX_PATH="$env:RUNNER_TEMP/clblast"
           cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
           ls -R
 
