--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -11,6 +11,9 @@ on:
     branches: [cron_job]
   #schedule:
   #  - cron: "22 22 * * 2"
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event.inputs.llama_cpp_commit }}
+  cancel-in-progress: true
 
 env:
   # Compiler defines common to all platforms
@@ -156,13 +159,13 @@ jobs:
             .\build\bin\Release\llama.dll
             .\build\bin\Release\clblast.dll
           name: llama-bin-win-clblast-x64.dll
-      - name: Upload artifacts (Windows)
+      - name: Upload artifacts (linux)
         if: ${{ matrix.os == 'ubuntu-22.04' }}
         uses: actions/upload-artifact@v4
         with:
           path: |
-            .\build\libllama.so
-            .\build\libclblast.so
+            ./build/libllama.so
+            ./build/libclblast.so
           name: llama-bin-linux-clblast-x64.so
           
   compile-cublas:
