--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -141,7 +141,7 @@ jobs:
           cmake .. ${{ env.COMMON_DEFINE }} -DLLAMA_CLBLAST=ON -DCMAKE_PREFIX_PATH="$env:RUNNER_TEMP/clblast"
           cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
           copy $env:RUNNER_TEMP/clblast/lib/clblast.dll .\bin\Release\clblast.dll
-          echo "78a8c98bcb2efe1a63318d901ab204d9ba96c3b29707b4ce0c4240bdcdc698d6  clblast.dll" >> tmp
+          echo "78a8c98bcb2efe1a63318d901ab204d9ba96c3b29707b4ce0c4240bdcdc698d6  ./bin/Release/clblast.dll" >> tmp
           sha256sum -c tmp || exit 255
           rm tmp
           ls -R
