--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     name: Test
     runs-on: ${{ matrix.os }}
     strategy:
+      max-parallel: 2
       fail-fast: false
       matrix:
         build: [linux-release, windows-release, osx-release]
