--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -356,6 +356,6 @@ jobs:
         uses: geekyeggo/delete-artifact@v2
         with:
           name: |
-            llama-*
+            # llama-*
             # llava-*
             *.metal
