Temporary run test con branch LlavaAPI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: [master]
+    branches: [master,LlavaAPI]
   pull_request:
     branches: [master]
 concurrency:
