--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [master,LlavaAPI]
-  pull_request:
-    branches: [master]
+    branches: [LlavaAPI]
+    # pull_request:
+    # branches: [master]
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
